--- a/templates/base.html
+++ b/templates/base.html
@@ -26,5 +26,26 @@
                 </ul>
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h1>{% block content_title %}{% endblock %}</h1>
+                    {% for category, message in get_flashed_messages(with_categories=true) %}
+                    <div class="alert alert-dismissable alert-{{ category }}">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        {{ message }}
+                    </div>
+                    {% endfor %}
+                    {% block content %}
+                    {% endblock %}
+                </div>
+            </div>
+            <div class="row">
+                <hr />
+                <footer>
+                    <p>&copy; James Kinyua</p>
+                </footer>
+            </div>
+        </div>
     </body>
 </html>
